--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+av==14.0.1
 contourpy==1.3.1
 cycler==0.12.1
 efficientnet_pytorch==0.7.1
 filelock==3.16.1
 fonttools==4.55.3
 fsspec==2024.12.0
+imageio==2.36.1
+imageio-ffmpeg==0.5.1
 Jinja2==3.1.5
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
@@ -25,6 +28,8 @@ nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 packaging==24.2
 pillow==11.1.0
+psutil==6.1.1
+pygame==2.6.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 setuptools==75.6.0
